--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <label for="genes-list">Selected Genes (required)</label>
                     <button class="btn btn-link" id="clearAll">Clear All</button>
-                    <span class="separator"></span>
+                    <span> | </span>
                     <a href="{% url 'genes_upload' %}" class="btn btn-link">Upload Gene List</a>
                     <div id="tokenfield-holder">
                         <input type="text" name="genes-list" class="form-control tokenfield"  id="geneListField" value="{% if 'gene' %}{{gene.genelist}}{% endif %}" placeholder="Enter your favorite gene's name">
