--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -25,8 +25,14 @@
         <div class="panel-body">
             <!--<p>Name of Favorite</p>-->
             <h4>AKT Pathway</h4>
-            <p>Selected Genes</p>
-            <h5>PTEN PIK3CA AKT MTOR</h5>
+
+            <div>
+                <h5>Selected Genes</h5>
+                <span class="delete-x filter-label label label-default">PTEN</span>
+                <span class="delete-x filter-label label label-default">PIK3CA</span>
+                <span class="delete-x filter-label label label-default">AKT </span>
+                <span class="delete-x filter-label label label-default">MTOR</span>
+            </div>
         </div>
         <div class="panel-footer">
             <menu class="page-action-group">
