--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -14,7 +14,7 @@
     </ol>
     <h1 class="page-header">Saved Gene Favorites</h1>
     <ul class="page-action-group">
-        <li> <a class="btn btn-default"><i class="fa fa-plus"></i>Create New Favorite</a></li>
+        <li> <a class="btn btn-default" href="{% url 'create_genes_list' %}"><i class="fa fa-plus"></i>Create New Favorite</a></li>
     </ul>
 {% endblock %}
 {% block content %}
