--- a/templates/genes/genes_upload.html
+++ b/templates/genes/genes_upload.html
@@ -14,10 +14,7 @@
         <li><a href="{% url 'genes' %}">Saved Gene Favorites</a></li>
     </ol>
     <h1 class="page-header">Upload Gene List</h1>
-    <ul>
-        <li><input type="radio" name="upload" checked> <label>Upload a gene list from a plain text (ascii) file -- items either space or tab separated or NEW LINE</label> </li>
-        <li><input type="radio" name="upload"> <label>Paste in a gene list -items either space or tab separated</label> </li>
-    </ul>
+
 
 {% endblock %}
 {% block content %}
@@ -26,11 +23,24 @@
     <section class="panel panel-default">
         <div class="panel-body">
 
-            <button class="btn btn-primary"><i class="fa fa-folder-open"></i>Select File</button>
-            <input type="file" name="upload">
-            <div id="tokenfield-holder">
-                <input type="text" id="geneListField">
+            <div class="radio"> <label><input type="radio" name="upload" checked data-target="#uploadField" aria-expanded="true" area-controls="uploadField"> Upload a gene list from a plain text (ascii) file -- items either space or tab separated or NEW LINE</label> </div>
+            <div class="collapse in" id="uploadField">
+                <button class="btn btn-primary"><i class="fa fa-folder-open"></i>Select File</button>
+                <input type="file" name="upload">
             </div>
+
+            <div class="radio"> <label><input type="radio" name="upload" data-target="#tokenfield-holder" aria-expanded="false" area-controls="tokenfield-holder"> Paste in a gene list -items either space or tab separated</label> </div>
+            <div id="tokenfield-holder" class="collapse">
+                <input type="text" id="geneListField">
+
+            </div>
+            <div>
+                <p class="helper-text__repeat tokenfield" style="display: none;"><span class="token invalid repeat">Repetitive</span> Genes will be removed on submit </p>
+                <p class="helper-text__invalid tokenfield" style="display: none;"><span class="token invalid">Invalid Genes</span> cannot be identified </p>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <button class="btn btn-default"><i class="fa fa-upload"></i> Upload Genes</button>
         </div>
     </section>
 </div>
