--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -25,7 +25,7 @@
             <form action="">
                 <div class="form-group">
                     <label for="genes-name">Name of Favorite (Required)</label>
-                    <input class="form-control" type="text" value="{% if 'gene' %}{{gene.name}}{% endif %} " name="genes-name" required>
+                    <input class="form-control" type="text" value="{% if 'genes_detail' %}{{genes_detail.name}}{% endif %} " name="genes-name" required>
                 </div>
 
                 <div class="form-group">
@@ -34,8 +34,12 @@
                     <span> | </span>
                     <a href="{% url 'genes_upload' %}" class="btn btn-link">Upload Gene List</a>
                     <div id="tokenfield-holder">
-                        <input type="text" name="genes-list" class="form-control tokenfield"  id="geneListField" value="{% if 'gene' %}{{gene.genelist}}{% endif %}" placeholder="Enter your favorite gene's name">
+                        <input type="text" name="genes-list" class="form-control tokenfield"  id="geneListField"  placeholder="Enter your favorite gene's name">
                     </div>
+                </div>
+                <div>
+                    <p class="helper-text__repeat tokenfield" style="display: none;"><span class="token invalid repeat">Repetitive</span> Genes will be removed on submit </p>
+                    <p class="helper-text__invalid tokenfield" style="display: none;"><span class="token invalid">Invalid Genes</span> cannot be identified </p>
                 </div>
             </form>
         </div>
@@ -53,6 +57,9 @@
         </div>
     </section>
 </div>
+<script type="text/javascript">
+    var genes_fav_detail = {{ genes_detail|safe }};
+</script>
 {% endblock %}
 
 {% block js_file %}{% static 'js/genes.js' %}{% endblock %}
