--- a/templates/genes/genes_upload.html
+++ b/templates/genes/genes_upload.html
@@ -25,22 +25,36 @@
 
             <div class="radio"> <label><input type="radio" name="upload" checked data-target="#uploadField" aria-expanded="true" area-controls="uploadField"> Upload a gene list from a plain text (ascii) file -- items either space or tab separated or NEW LINE</label> </div>
             <div class="collapse in" id="uploadField">
-                <button class="btn btn-primary" id="uploadBtn"><i class="fa fa-folder-open"></i>Select File</button>
+                <button class="btn btn-primary" id="uploadBtn">
+                    <i class="fa fa-cloud-upload"></i> Select File
+                </button>
                 <input type="file" name="upload" id="fileUploadField" style="display: none">
             </div>
 
             <div class="radio"> <label><input type="radio" name="upload" data-target="#tokenfield-holder" aria-expanded="false" area-controls="tokenfield-holder"> Paste in a gene list -items either space or tab separated</label> </div>
             <div id="tokenfield-holder" class="collapse">
                 <input type="text" id="geneListField">
-
             </div>
             <div>
                 <p class="helper-text__repeat tokenfield" style="display: none;"><span class="token invalid repeat">Repetitive</span> Genes will be removed on submit </p>
                 <p class="helper-text__invalid tokenfield" style="display: none;"><span class="token invalid">Invalid Genes</span> cannot be identified </p>
             </div>
         </div>
+        <!--<div class="panel-footer">-->
+            <!--<button class="btn btn-default"><i class="fa fa-upload"></i> Upload Genes</button>-->
+        <!--</div>-->
+    </section>
+    <section class="panel panel-default">
+        <div class="panel-body">
+            <p><i class="fa fa-exclamation-circle"></i> The following items were not recognized as gene identifiers. You may either correct or delete these items -- or upload them as-is. For corrections, refer to the
+                <a href="">System Gene Identifiers</a>.</p>
+            <div id="tokenfield-holder" class="collapse">
+                <input type="text" id="errorGeneListField">
+            </div>
+        </div>
         <div class="panel-footer">
-            <button class="btn btn-default"><i class="fa fa-upload"></i> Upload Genes</button>
+            <button class="btn btn-default">Upload Genes</button>
+            <button class="btn btn-link">Delete items and Continue</button>
         </div>
     </section>
 </div>
