--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -34,26 +34,25 @@
                     <span> | </span>
                     <a href="{% url 'genes_upload' %}" class="btn btn-link">Upload Gene List</a>
                     <div id="tokenfield-holder">
-                        <input type="text" name="genes-list" class="form-control tokenfield"  id="geneListField"  placeholder="Enter your favorite gene's name">
+                        <input type="text" name="genes-list" class="form-control tokenfield"  id="geneListField"  placeholder="Enter your favorite gene's name" required>
+                    </div>
+                    <div class="tokenfield">
+                        <p class="helper-text__repeat" style="display: none;"><i class="fa fa-exclamation-circle"></i> <span class="token invalid repeat">Repetitive</span>Genes will be removed on submit </p>
+                        <p class="helper-text__invalid" style="display: none;"><i class="fa fa-exclamation-circle"></i> The following <span class="token invalid">items</span>were not recognized as gene identifiers. You may either correct or delete these items -- or upload them as-is. For corrections, refer to the
+                        <a href="">System Gene Identifiers</a>.</p>
                     </div>
                 </div>
-                <div>
-                    <p class="helper-text__repeat tokenfield" style="display: none;"><span class="token invalid repeat">Repetitive</span> Genes will be removed on submit </p>
-                    <p class="helper-text__invalid tokenfield" style="display: none;"><span class="token invalid">Invalid Genes</span> cannot be identified </p>
-                </div>
+                <ul class="page-action-group">
+                    {% if '/create/' in request.path %}
+                        <li role="menuitem"><submit class="btn btn-default">Save as Favorite</submit></li>
+                        <li role="menuitem"><a href="{% url 'genes' %}">Cancel</a></li>
+                    {% else %}
+                        <li role="menuitem"><submit class="btn btn-default">Save Changes</submit></li>
+                        <li role="menuitem"><menuitem class="btn btn-link"><a href="{% url 'genes_detail' 0 %}">Cancel</a></menuitem></li>
+                    {% endif %}
+                    <menuitem class="btn btn-link pull-right"><a href="">View System Gene Identifiers</a></menuitem>
+                </ul>
             </form>
-        </div>
-        <div class="panel-footer">
-            <menu class="page-action-group">
-                {% if '/create/' in request.path %}
-                    <menuitem class="btn btn-default">Save as Favorite</menuitem>
-                {% else %}
-                    <menuitem class="btn btn-default">Save Changes</menuitem>
-                {% endif %}
-
-                <menuitem class="btn btn-link"><a href="{% url 'genes_detail' 0 %}">Cancel</a></menuitem>
-                <menuitem class="btn btn-link pull-right"><a href="">View System Gene Identifiers</a></menuitem>
-            </menu>
         </div>
     </section>
 </div>
