--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -38,8 +38,7 @@
                     </div>
                     <div class="tokenfield">
                         <p class="helper-text__repeat" style="display: none;"><i class="fa fa-exclamation-circle"></i> <span class="token invalid repeat">Repetitive</span>Genes will be removed on submit </p>
-                        <p class="helper-text__invalid" style="display: none;"><i class="fa fa-exclamation-circle"></i> The following <span class="token invalid">items</span>were not recognized as gene identifiers. You may either correct or delete these items -- or upload them as-is. For corrections, refer to the
-                        <a href="">System Gene Identifiers</a>.</p>
+                        <p class="helper-text__invalid" style="display: none;"><i class="fa fa-exclamation-circle"></i> The following <span class="token invalid">items</span>were not recognized as gene identifiers. You may either correct or delete these items -- or upload them as-is.</p>
                     </div>
                 </div>
                 <ul class="page-action-group">
