--- a/templates/genes/genes_upload.html
+++ b/templates/genes/genes_upload.html
@@ -9,13 +9,13 @@
 {% block page_name %}genes_upload{% endblock %}
 
 {% block page_header %}
+<div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
         <li><a href="{% url 'genes' %}">Saved Gene Favorites</a></li>
     </ol>
     <h1 class="page-header">Upload Gene List</h1>
-
-
+</div>
 {% endblock %}
 {% block content %}
 <div class="container">
