--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -9,11 +9,13 @@
 {% block page_name %}genes_detail{% endblock %}
 
 {% block page_header %}
+<div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
         <li><a href="{% url 'genes' %}">Saved Gene Favorites</a></li>
     </ol>
     <h1 class="page-header">Gene Favorite Details</h1>
+</div>
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -33,8 +35,8 @@
         </div>
         <div class="panel-footer">
             <menu class="page-action-group">
-                <a class="btn btn-primary" href="{% url 'edit_genes_list' genes_detail.id %}"><i class="fa fa-pencil"></i> Edit</a>
-                <menuitem class="btn btn-primary"><i class="fa fa-trash"></i> Delete</menuitem>
+                <a class="btn btn-info" href="{% url 'edit_genes_list' genes_detail.id %}"><i class="fa fa-pencil"></i> Edit</a>
+                <menuitem class="btn btn-info"><i class="fa fa-trash"></i> Delete</menuitem>
                 <span class="separator"></span>
                 <menuitem class="btn btn-default"><i class="fa fa-plus"></i> Start New Workbook</menuitem>
                 <a class="btn btn-link pull-right">View System Gene Identifier</a>
