--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -9,16 +9,16 @@
 {% block page_name %}genes_list{% endblock %}
 
 {% block page_header %}
+<div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
     </ol>
     <h1 class="page-header pull-left">Saved Gene Favorites</h1>
-    <a class="btn btn-default pull-right" href="{% url 'create_genes_list' %}"><i class="fa fa-plus"></i>Create New Favorite</a></li>
+    <a class="btn btn-primary pull-right" href="{% url 'create_genes_list' %}"><i class="fa fa-plus"></i>Create New Favorite</a></li>
+</div>
 {% endblock %}
 {% block content %}
 <div class="container">
-
-
     <div class="panel penel-default">
         <div class="panel-body">
             <table class="table table-striped tablesorter">
