--- a/templates/genes/genes_upload.html
+++ b/templates/genes/genes_upload.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="page-action-group">
                     <button class="btn btn-primary" id="paste-upload" data-target="#paste-in-genes">Upload Genes</button>
-                    <button class="btn btn-link" id="clear" data-target="#paste-in-genes">Clear All</button>
+                    <button class="btn btn-link" id="clear-paste-upload" data-target="#paste-in-genes">Clear All</button>
                 </div>
             </div>
             <div class="tab-pane panel-body" id="upload-gene-list">
