--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -28,19 +28,26 @@
         <div class="panel-body">
             <div>
                 <h5>Selected Genes</h5>
-                {% for gene in genes_detail.genes  %}
-                    <span class="delete-x filter-label label label-default">{{gene}}</span>
-                {% endfor %}
+                <ul>
+                    {% for gene in genes_detail.genes  %}
+                        <li class="delete-x filter-label label label-default">{{gene}}</li>
+                    {% endfor %}
+                </ul>
             </div>
-        </div>
-        <div class="panel-footer">
-            <menu class="page-action-group">
-                <a class="btn btn-info" href="{% url 'edit_genes_list' genes_detail.id %}"><i class="fa fa-pencil"></i> Edit</a>
-                <menuitem class="btn btn-info"><i class="fa fa-trash"></i> Delete</menuitem>
-                <span class="separator"></span>
-                <menuitem class="btn btn-default"><i class="fa fa-plus"></i> Start New Workbook</menuitem>
-                <a class="btn btn-link pull-right">View System Gene Identifier</a>
-            </menu>
+            <div>
+                <ul class="page-action-group">
+                    <li><a class="btn btn-info" href="{% url 'edit_genes_list' genes_detail.id %}"><i class="fa fa-pencil"></i> Edit</a></li>
+                    <li><button class="btn btn-info"><i class="fa fa-trash"></i> Delete</button></li>
+                    <li class="separator"></li>
+                    <li>
+                        <form action="{% url 'worksheet_create_with_genes' genes_detail.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i> Start New Workbook</button>
+                        </form>
+                    </li>
+                    <li class="pull-right"><a class="btn btn-link>View System Gene Identifier</a></li>
+                </ul>
+            </div>
         </div>
     </section>
 </div>
