--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -14,7 +14,7 @@
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
     </ol>
     <h1 class="page-header pull-left">Saved Gene Favorites</h1>
-    <a class="btn btn-primary pull-right" href="{% url 'create_genes_list' %}"><i class="fa fa-plus"></i>Create New Favorite</a></li>
+    <a class="btn btn-primary pull-right" href="{% url 'gene_fav_create' %}"><i class="fa fa-plus"></i>Create New Favorite</a></li>
 </div>
 {% endblock %}
 {% block content %}
