fixing initial state message once again

--- a/templates/genes/genes_list.html
+++ b/templates/genes/genes_list.html
@@ -52,7 +52,7 @@
                 </tbody>
             </table>
             {% else %}
-            <p class="center">You don't have any Genes Favorites yet.</p>
+            <p class="center">You don't have any Gene Favorites yet.</p>
             <p class="center"><a href="{% url 'gene_fav_create' %}" class="btn btn-default">Create Gene Favorite</a></p>
             {% endif %}
 
