--- a/templates/genes/genes_detail.html
+++ b/templates/genes/genes_detail.html
@@ -23,26 +23,30 @@
     <section class="panel panel-default">
         <div class="panel-heading">
             <!--<p>Name of Favorite</p>-->
-            <h4 class="panel-title">{{genes_detail.name}}</h4>
+            <h4 class="panel-title">{{gene_favorite.name}}</h4>
         </div>
         <div class="panel-body">
             <div>
                 <h5>Selected Genes</h5>
                 <ul>
-                    {% for gene in genes_detail.genes  %}
-                        <li class="delete-x filter-label label label-default">{{gene}}</li>
+                    {% for gene in gene_favorite.genes  %}
+                        <li class="delete-x filter-label label label-default">{{gene.name}}</li>
                     {% endfor %}
                 </ul>
             </div>
             <div>
                 <ul class="page-action-group">
-                    <li><a class="btn btn-info" href="{% url 'gene_fav_edit' genes_detail.id %}"><i class="fa fa-pencil"></i> Edit</a></li>
-                    <li><button class="btn btn-info"><i class="fa fa-trash"></i> Delete</button></li>
+                    <li><a class="btn btn-info" href="{% url 'gene_fav_edit' gene_favorite.id %}"><i class="fa fa-pencil"></i> Edit</a></li>
+                    <li>
+                        <form action="{% url 'gene_fav_delete' gene_favorite.id %}" method="POST">
+                            {% csrf_token %}
+                            <input class="btn btn-info" type="submit" value="Delete">
+                        </form>
                     <li class="separator"></li>
                     <li>
                         <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
                             {% csrf_token %}
-                            <input type="hidden" name="gene_list_id" value="{{ genes_detail.id }}">
+                            <input type="hidden" name="gene_list_id" value="{{ gene_favorite.id }}">
                             <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i> Start New Workbook</button>
                         </form>
                     </li>
