--- a/templates/genes/genes_edit.html
+++ b/templates/genes/genes_edit.html
@@ -11,7 +11,12 @@
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
-        <li><a href="{% url 'genes' %}">Saved Gene Favorites</a></li>
+        {% if workbook %}
+            <li><a href="{% url 'workbooks' %}">Saved Workbooks</a></li>
+            <li><a href="{% url 'workbook_display' workbook.id worksheet.id %}">{{ workbook.name }}</a></li>
+        {% else %}
+            <li><a href="{% url 'genes' %}">Saved Gene Favorites</a></li>
+        {% endif %}
     </ol>
     <h1 class="page-header">Edit Gene Favorite</h1>
 </div>
@@ -21,22 +26,37 @@
 
     <section class="panel panel-defaul">
         <div class="panel-heading">
-
         </div>
         <div class="panel-body">
-            <form action="">
+            {% if gene_favorite %}
+                <form method="POST" action="{% url 'gene_fav_update' gene_favorite.id %}">
+            {% else %}
+                <form method="POST" action="{% url 'gene_fav_save' %}">
+            {% endif %}
+                {% csrf_token %}
                 <div class="form-group">
                     <label for="genes-name">Name of Favorite (Required)</label>
-                    <input class="form-control" type="text" value="{% if 'gene_fav_detail' %}{{genes_detail.name}}{% endif %} " name="genes-name" required>
+                    <input class="form-control" type="text" value="{% if 'gene_fav_detail' %}{{gene_favorite.name}}{% endif %} " name="genes-name" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="genes-list">Selected Genes (required)</label>
-                    <button class="btn btn-link" id="clearAll">Clear All</button>
-                    <span> | </span>
-                    <a href="{% url 'gene_fav_upload' %}" class="btn btn-link">Upload Gene List</a>
+                    <div>
+                        <label for="genes-list">Selected Genes (required)</label>
+                        <button class="btn btn-link" id="clearAll">Clear All</button>
+                        <span> | </span>
+                        <div id="uploadField" class="center" style="display : inline-block;">
+                            <button class="btn btn-link" id="file-upload-btn">
+                                <i class="fa fa-file"></i> Upload Genes List
+                            </button>
+                            <input type="file" name="upload" id="file-upload-field" style="display: none">
+                            <div id="uploading" class="collapse" style="margin-left: 20px;">
+                                <i class="fa fa-circle-o-notch fa-spin"></i>  <span id="selected-file-name"></span>
+                            </div>
+                        </div>
+                    </div>
                     <div id="tokenfield-holder">
-                        <input type="text" name="genes-list" class="form-control tokenfield"  id="geneListField"  placeholder="Enter your favorite gene's name" required>
+                        <!-- "paste-in-genes" -->
+                        <textarea name="genes-list" class="form-control tokenfield" id="paste-in-genes"  placeholder="Enter your favorite gene's name" required></textarea>
                     </div>
                     <div class="tokenfield">
                         <p class="helper-text__repeat" style="display: none;"><i class="fa fa-exclamation-circle"></i> <span class="token invalid repeat">Repetitive</span>Genes will be removed on submit </p>
@@ -44,12 +64,16 @@
                     </div>
                 </div>
                 <ul class="page-action-group">
-                    {% if '/create/' in request.path %}
-                        <li role="menuitem"><submit class="btn btn-primary">Save as Favorite</submit></li>
-                        <li role="menuitem"><a href="{% url 'genes' %}">Cancel</a></li>
+                    {% if gene_favorite %}
+                        <li role="menuitem">
+                            <input type="submit" value="Save Changes" class="btn btn-primary"/>
+                        </li>
+                        <li role="menuitem"><menuitem class="btn btn-link"><a href="{% url 'gene_fav_detail' gene_favorite.id %}">Cancel</a></menuitem></li>
                     {% else %}
-                        <li role="menuitem"><submit class="btn btn-primary">Save Changes</submit></li>
-                        <li role="menuitem"><menuitem class="btn btn-link"><a href="{% url 'gene_fav_detail' 0 %}">Cancel</a></menuitem></li>
+                        <li role="menuitem">
+                            <input type="submit" value="Save as Favorite" class="btn btn-primary"/>
+                        </li>
+                        <li role="menuitem"><a href="{% url 'genes' %}">Cancel</a></li>
                     {% endif %}
                     <menuitem class="btn btn-link pull-right"><a href="">View System Gene Identifiers</a></menuitem>
                 </ul>
@@ -58,7 +82,11 @@
     </section>
 </div>
 <script type="text/javascript">
-    var genes_fav_detail = {{ genes_detail|safe }};
+    {% if gene_favorite %}
+        var gene_fav = { genes : {{ genes }} };
+    {% else %}
+        var gene_fav = { genes : [] };
+    {% endif %}
 </script>
 {% endblock %}
 
